--- a/SnakeGame/style.css
+++ b/SnakeGame/style.css
@@ -1,3 +1,61 @@
+body, html {
+  font-family: "Roboto", sans-serif;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  margin: auto;
+}
+
 canvas {
+    /* border: 1px solid black; */
+    width: 400px;
+}
+
+.controls {
+  width: fit-content;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 15px;
+}
+
+.controls span {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.containerControls {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  margin-bottom: 5px;
+}
+
+.borderButton {
     border: 1px solid black;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+}
+
+.buttons button {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid black;
+  background-color: #f2f2f2;
+  cursor: pointer;
+}
+
+#score {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 5px;
+  align-self: flex-end;
 }
